--- a/42cursus/libft/Makefile
+++ b/42cursus/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: si-park <si-park@student.42gyeongsan.      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/03 20:14:48 by si-park           #+#    #+#              #
-#    Updated: 2024/10/13 15:40:48 by si-park          ###   ########.fr        #
+#    Updated: 2024/11/06 20:35:50 by si-park          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,30 +19,27 @@ SRC = ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c \
       ft_isascii.c ft_isdigit.c ft_isprint.c \
       ft_memchr.c ft_memcmp.c ft_memcpy.c ft_memmove.c ft_memset.c \
       ft_strchr.c ft_strdup.c ft_strlcat.c ft_strlcpy.c ft_strlen.c \
-      ft_strncmp.c ft_strnstr.c ft_strrchr.c ft_tolower.c ft_toupper.c\
-	  ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c\
-	  ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
+      ft_strncmp.c ft_strnstr.c ft_strrchr.c ft_tolower.c ft_toupper.c \
+      ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c \
+      ft_strmapi.c ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c \
+      ft_putendl_fd.c ft_putnbr_fd.c
 
 OBJ = $(SRC:.c=.o)
 
-# 기본 규칙: libft.a를 만든다
+# 기본 규칙
 all: $(NAME)
 
-# libft.a를 만들기 위한 규칙
 $(NAME): $(OBJ)
 		ar rcs $(NAME) $(OBJ)
 
-# .o 파일을 만들기 위한 규칙
 %.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@
+		$(CC) $(CFLAGS) -c $< -o $@
 
-# 깨끗하게 정리하는 규칙
+# 청소 규칙
 clean:
-	rm -f $(OBJ)
+		rm -f $(OBJ)
 
-# libft.a와 .o 파일을 모두 제거하는 규칙
 fclean: clean
-	rm -f $(NAME)
+		rm -f $(NAME)
 
-# 다시 빌드하는 규칙
 re: fclean all
