--- a/42cursus/printf/Makefile
+++ b/42cursus/printf/Makefile
@@ -6,39 +6,38 @@
 #    By: si-park <si-park@student.42gyeongsan.kr    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/01/07 17:07:55 by si-park           #+#    #+#              #
-#    Updated: 2025/01/08 18:22:54 by si-park          ###   ########.fr        #
+#    Updated: 2025/01/14 16:41:18 by si-park          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libftprintf.a
-CC = cc
+
+CC = gcc
 CFLAGS = -Wall -Wextra -Werror
 
-SRC = $(wildcard *.c)
-OBJ = $(SRC:.c=.o)
+PRINTF_SRCS = ft_printf.c ft_hexutil.c
+LIBFT_SRCS = libft/ft_itoa.c libft/ft_strlen.c libft/ft_strdup.c \
+             libft/ft_putchar_fd.c libft/ft_putstr_fd.c \
+             libft/ft_memmove.c libft/ft_memcpy.c
 
-LIBFT_DIR = /home/si-park/sp/libft
-LIBFT = $(LIBFT_DIR)/libft.a
-LIBFT_INC = -I$(LIBFT_DIR)
-LIBFT_LIB = -L$(LIBFT_DIR)
+SRCS = $(PRINTF_SRCS) $(LIBFT_SRCS)
 
-all: $(LIBFT) $(NAME)
+OBJS = $(SRCS:.c=.o)
 
-$(LIBFT):
-	@make -C $(LIBFT_DIR)
+HEADERS = ft_printf.h libft/libft.h
 
-$(NAME): $(OBJ) $(LIBFT)
-	ar rcs $(NAME) $(OBJ) $(LIBFT)
+all: $(NAME)
 
-%.o: %.c
-	$(CC) $(CFLAGS) $(LIBFT_INC) -c $< -o $@
+$(NAME): $(OBJS)
+	ar rcs $(NAME) $(OBJS)
+
+%.o: %.c $(HEADERS)
+	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f $(OBJ)
-	@make -C $(LIBFT_DIR) clean
+	rm -f $(OBJS)
 
 fclean: clean
 	rm -f $(NAME)
-	@make -C $(LIBFT_DIR) fclean
 
 re: fclean all
