--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "C_Cpp.errorSquiggles": "disabled",
     "C_Cpp.default.compilerPath": "C:\\MinGW\\bin\\gcc.exe",
     "editor.fontFamily": "'Consolas', 'Droid Sans Mono', 'monospace', monospace",
-    "editor.fontSize": 14
+    "editor.fontSize": 14,
+    "files.associations": {
+        "sstream": "c"
+    }
 }
