--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "editor.fontSize": 14,
     "files.associations": {
         "sstream": "c"
-    }
+    },
+    "terminal.integrated.defaultProfile.windows": "Ubuntu (WSL)"
 }
